--- a/src/r3_port_riscv/Cargo.toml
+++ b/src/r3_port_riscv/Cargo.toml
@@ -22,10 +22,11 @@ r3_kernel = { version = "0.0.0", path = "../r3_kernel" }
 r3_core = { version = "0.1.0", path = "../r3_core" }
 
 tock-registers = { version = "0.7.0" }
+unstringify = { version = "0.1.4" }
+seq-macro = { version = "0.3.0" }
 svgbobdoc = { version = "0.3.0-alpha.4" }
 riscv-rt = { version = ">= 0.6.0, < 0.9.0" }
 riscv = { version = ">= 0.5.0, < 0.8.0" }
-seq-macro = { version = "0.3.0" }
 
 [package.metadata.docs.rs]
 targets = []
