--- a/src/r3_port_riscv/Cargo.toml
+++ b/src/r3_port_riscv/Cargo.toml
@@ -25,6 +25,7 @@ tock-registers = { version = "0.7.0" }
 svgbobdoc = { version = "0.3.0-alpha.4" }
 riscv-rt = { version = ">= 0.6.0, < 0.9.0" }
 riscv = { version = ">= 0.5.0, < 0.8.0" }
+seq-macro = { version = "0.3.0" }
 
 [package.metadata.docs.rs]
 targets = []
