test(port_riscv): add `boot-rt` Cargo feature to the test driver
S-mode will need alteration to the boot process, hence needing a
separate boot mode.

--- a/src/r3_port_riscv_test_driver/Cargo.toml
+++ b/src/r3_port_riscv_test_driver/Cargo.toml
@@ -13,9 +13,12 @@ run = [
     "r3_port_riscv",
     "r3_portkit",
     "r3",
-    "riscv-rt",
     "riscv",
     "log",
+]
+
+boot-rt = [
+    "riscv-rt",
 ]
 
 output-rtt = [
