--- a/src/r3_test_runner/Cargo.toml
+++ b/src/r3_test_runner/Cargo.toml
@@ -15,6 +15,7 @@ probe-rs-rtt = { version = "0.11.0" }
 tokio-serial = { version = "5.4.1" }
 lazy_static = { version = "1.4.0" }
 env_logger = { version = "0.8.4" }
+fn-formats = { version = "0.0.5" }
 serde_json = { version = "1.0.57" }
 serialport = { version = "4.0.0" }
 itertools = { version = "0.10.0" }
