--- a/src/r3_core/Cargo.toml
+++ b/src/r3_core/Cargo.toml
@@ -1,11 +1,10 @@
 [package]
 name = "r3_core"
-version = "0.0.0"
+version = "0.0.1"
 edition = "2021"
 license = "MIT OR Apache-2.0"
 description = "R3 RTOS core API definition (placeholder)"
-categories = ["embedded", "no-std"]
-keywords = ["r3", "rtos"]
+keywords = ["r3"]
 repository = "https://github.com/r3-os/r3"
 
 [dependencies]
