chore(deps): patch `riscv ^0.6` and `riscv ^0.7` as well
Fixes build failures due to the use of now-removed `llvm_asm!`.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,7 +26,7 @@ members = [
 ]
 resolver = "2"
 
-[patch.crates-io.riscv]
+[patch.crates-io.riscv-0p5]
 # We need to enable `riscv/inline-asm` to work around
 # <https://github.com/rust-embedded/riscv/issues/69>. However, some external
 # crates depend on `riscv` 0.5.x, which uses the old form of `asm!` with the
@@ -34,7 +34,19 @@ resolver = "2"
 # we have to patch `riscv` 0.5.x with the version that uses the form of inline
 # assembler supported by the current compiler.
 git = "https://github.com/r3-os/rust-riscv.git"
+package = "riscv"
 branch = "refresh/0.5"
+
+[patch.crates-io.riscv-0p6]
+# Ditto.
+git = "https://github.com/r3-os/rust-riscv.git"
+package = "riscv"
+branch = "refresh/0.6"
+
+[patch.crates-io.riscv-0p7]
+# Ditto.
+git = "https://github.com/rust-embedded/riscv.git"
+package = "riscv"
 
 [patch.crates-io.riscv-rt]
 # FIXME: This is a work-around for
