chore(ci): temporarily disable the documentation generation of `r3_support_rp2040`
Building a documentation for `rp2040` currently causes a compiler crash.
This is probably related to [rust-lang/rust#93476][1].

    thread 'rustc' panicked at 'no entry found for key', src/librustdoc/passes/collect_intra_doc_links.rs:930:16

[1]: https://github.com/rust-lang/rust/issues/93476

--- a/.github/workflows/doc.yml
+++ b/.github/workflows/doc.yml
@@ -35,9 +35,10 @@ jobs:
         uses: actions-rs/cargo@v1
         with: { command: doc, args: -p r3_port_riscv --all-features }
 
-      - name: Build Documentation for “r3_support_rp2040”
-        uses: actions-rs/cargo@v1
-        with: { command: doc, args: -p r3_support_rp2040 --all-features }
+      # FIXME: `rp2040` causes ICE <https://github.com/rust-lang/rust/issues/93476>
+      # - name: Build Documentation for “r3_support_rp2040”
+      #   uses: actions-rs/cargo@v1
+      #   with: { command: doc, args: -p r3_support_rp2040 --all-features }
 
       - name: Build Documentation for “r3_support_rza1”
         uses: actions-rs/cargo@v1
