chore(ci): check cross-references using Tagref
<https://github.com/stepchowfun/tagref>

> It allows you to annotate your code with tags (in comments), which
> can be  referenced from other parts of the codebase. For example, you
> might have a tag like this:
>
>     # [tag:cities_nonempty] This function always returns a non-empty list.
>     def get_cities():
>       return ['San Francisco', 'Tokyo']
>
> Elsewhere, suppose you're writing some code which depends on that
> postcondition. You can make that clear by referencing the tag:
>
>     cities = get_cities()
>
>     first_city = cities[0] # This is safe due to [ref:cities_nonempty].
>
> Tagref ensures such references remain valid.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,6 +19,9 @@ jobs:
           profile: minimal
           components: clippy, rustfmt
 
+      - name: Install tagref
+        uses: ./.github/actions/install-tagref
+
       - name: Install dependencies (Linux)
         run: |
           sudo apt-get update
@@ -30,6 +33,9 @@ jobs:
           # triple is provided.
           sed -E -i.bak 's/.*basic_.*//' Cargo.toml
           sed -E -i.bak 's/.*smp_rp_pico.*//' Cargo.toml
+
+      - name: Check cross-references with Tagref
+        run: tagref
 
       - name: Clippy
         uses: actions-rs/clippy-check@v1
