chore(ci): fix casing (`tagref` → `Tagref`)

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,7 +19,7 @@ jobs:
           profile: minimal
           components: clippy, rustfmt
 
-      - name: Install tagref
+      - name: Install Tagref
         uses: ./.github/actions/install-tagref
 
       - name: Install dependencies (Linux)
