--- a/src/r3/Cargo.toml
+++ b/src/r3/Cargo.toml
@@ -29,6 +29,7 @@ _full = []
 stable_deref_trait = { version = "1.2.0", default-features = false }
 embed-doc-image = { version = "0.1.4", optional = true }
 svgbobdoc = { version = "0.3.0-alpha.4" }
+macropol = { version = "0.1.2" }
 r3_core = { version = "0.1.0", path = "../r3_core" }
 
 [dev-dependencies]
