chore(ci): pass `-Ccodegen-units=1 -Copt-level=z` when compiling for size reports
Turns out `-Copt-level=z` is quite effective for this test suite.
A local test result with `--target qemu_mps2_an385` is shown below.

Before:

|  Name | `.text` | `.data` | `.bss` |
|-------|---------|---------|--------|
| (Min) |    3696 |      16 |     96 |
| (Max) |   13920 |     220 |  12408 |

After:

| Name  | `.text` | `.data` | `.bss` |
|-------|---------|---------|--------|
| (Min) |    3356 |      16 |     96 |
| (Max) |    8940 |     220 |  12408 |

--- a/.github/workflows/report-size.yml
+++ b/.github/workflows/report-size.yml
@@ -50,9 +50,11 @@ jobs:
           path: ./target/debug
           key: ${{ runner.os }}-ci-runner-${{ hashFiles('rust-toolchain', 'src/r3_test_runner/**', 'src/r3_test_suite/**') }}
 
-      - name: Enable LTO
+      - name: "Set -Clto -Ccodegen-units=1 -Copt-level=z"
         run: |
-          echo "lto = true" >> Cargo.toml
+          echo 'lto = true' >> Cargo.toml
+          echo 'codegen-units = 1' >> Cargo.toml
+          echo 'opt-level = "z"' >> Cargo.toml
 
       - name: Generate a size report
         run: |
