--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,6 +27,10 @@ jobs:
           sudo apt-get update
           sudo apt-get install libusb-1.0-0-dev libudev-dev
 
+      - name: Allow `incomplete_features`
+        run: |
+          echo "RUSTFLAGS=-A incomplete_features" >> $GITHUB_ENV
+
       - name: Exclude crates
         run: |
           # Example crates will fail to compile unless an appropriate target
@@ -85,6 +89,10 @@ jobs:
           rustup target add thumbv6m-none-eabi thumbv7em-none-eabihf
           rustup target add armv7a-none-eabi
 
+      - name: Allow `incomplete_features`
+        run: |
+          echo "RUSTFLAGS=-A incomplete_features" >> $GITHUB_ENV
+
       - name: Build examples
         shell: bash
         run: |
@@ -129,6 +137,10 @@ jobs:
         if: "!startsWith(matrix.os, 'ubuntu-')"
         run: echo "testflags=--test-threads=1" >> $GITHUB_ENV
 
+      - name: Allow `incomplete_features`
+        run: |
+          echo "RUSTFLAGS=-A incomplete_features" >> $GITHUB_ENV
+
       - name: Exclude crates
         shell: bash
         run: |
@@ -170,6 +182,10 @@ jobs:
         run: |
           sudo apt-get update
           sudo apt-get install libusb-1.0-0-dev libudev-dev
+
+      - name: Allow `incomplete_features`
+        run: |
+          echo "RUSTFLAGS=-A incomplete_features" >> $GITHUB_ENV
 
       - name: Convert feature list to Cargo parameter
         run: |
