chore(deps): replace `rp2040` with `rp2040-pac`
It looks more actively maintained and includes a fix for the incorrect
definition of `USBCTRL_REGS.buff_status`.

--- a/examples/smp_rp_pico/Cargo.toml
+++ b/examples/smp_rp_pico/Cargo.toml
@@ -15,5 +15,5 @@ r3 = { path = "../../src/r3", features = ["sync"] }
 
 rp2040-boot2 = { version = "0.2.0" }
 cortex-m-rt = { version = "0.6.12", features = ["device"] }
+rp2040-pac = { version = "0.3.0" }
 cortex-m = { version = "0.7.3", features = ["inline-asm"] }
-rp2040 = { version = "0.1.0" }
