--- a/examples/basic_rp_pico/Cargo.toml
+++ b/examples/basic_rp_pico/Cargo.toml
@@ -14,5 +14,5 @@ r3_kernel = { path = "../../src/r3_kernel", features = ["system_time"] }
 r3 = { path = "../../src/r3", features = ["sync"] }
 
 rp2040-boot2 = { version = "0.2.0" }
+rp2040-pac = { version = "0.3.0" }
 cortex-m-rt = { version = "0.6.12", features = ["device"] }
-rp2040 = { version = "0.1.0" }
