--- a/src/r3_port_arm_m_test_driver/Cargo.toml
+++ b/src/r3_port_arm_m_test_driver/Cargo.toml
@@ -21,7 +21,7 @@ run = [
 # so it doesn't require `output-*`.
 board-rp_pico = [
     "r3_support_rp2040",
-    "rp2040",
+    "rp2040-pac",
 ]
 
 # Other targets specify a generic output mechanism
@@ -45,9 +45,9 @@ cortex-m-semihosting = { version = "0.3.5", optional = true }
 panic-semihosting = { version = "0.5.3", optional = true }
 panic-rtt-target = { version = "0.1.0", optional = true, features = ["cortex-m"] }
 cortex-m-rt = { version = "0.6.12", optional = true, features = ["device"] }
+rp2040-pac = { version = "0.3.0", optional = true }
 rtt-target = { version = "0.2.0", optional = true, features = ["cortex-m"] }
 cortex-m = { version = "0.7.3", optional = true, features = ["inline-asm"] }
-rp2040 = { version = "0.1.0", optional = true }
 log = { version = "0.4.8", optional = true }
 
 [dependencies.r3_kernel]
