--- a/src/r3_support_rp2040/Cargo.toml
+++ b/src/r3_support_rp2040/Cargo.toml
@@ -27,9 +27,9 @@ r3 = { version = "0.1.0", path = "../r3" }
 embedded-hal = { version = "0.2.4", optional = true }
 usbd-serial = { version = "0.1.1", optional = true }
 inline_dyn = { version = "0.1.1", optional = true }
+rp2040-pac = { version = "0.3.0" }
 usb-device = { version = "0.2.7", optional = true }
 cortex-m = { version = "0.7.3", optional = true }
-rp2040 = { version = "0.1.0" }
 vcell = { version = "0.1.2", optional = true }
 nb = { version = "1.0.0", optional = true }
 
