chore(doc): insert `common.md` to the API documentation using the `--html-in-header` flag
<https://doc.rust-lang.org/1.58.1/rustdoc/command-line-arguments.html#--html-in-header-include-more-html-in-head>

This ensures that the upper-left logo is styled consistently whether
`common.md` is included by `#[doc = ...]` or not.

Some pages will include two instances of `common.md`. While this isn't
ideal, it shouldn't cause a problem in practice.

--- a/.github/workflows/doc.yml
+++ b/.github/workflows/doc.yml
@@ -18,6 +18,9 @@ jobs:
 
       - name: Install dependencies (Linux)
         run: .github/scripts/install-deno.sh
+      - name: Set rustdoc flags
+        run: |
+          echo "RUSTDOCFLAGS=--html-in-header `pwd`/src/r3/src/common.md" >> $GITHUB_ENV
 
       - name: Build Documentation
         uses: actions-rs/cargo@v1
