--- a/src/r3/Cargo.toml
+++ b/src/r3/Cargo.toml
@@ -39,3 +39,4 @@ r3_kernel = { path = "../r3_kernel" }
 [package.metadata.docs.rs]
 all-features = true
 targets = []
+rustdoc-args = ["--html-in-header", "src/common.md"]  # [ref:doc_global_styling]
