--- a/src/r3_port_std/Cargo.toml
+++ b/src/r3_port_std/Cargo.toml
@@ -7,6 +7,10 @@ description = "Simulation environment for running R3 on a hosted environment"
 keywords = ["r3", "simulator"]
 repository = "https://github.com/r3-os/r3"
 
+[features]
+# Used for documentation builds [ref:doc_feature]
+doc = []
+
 [dependencies]
 r3_kernel = { version = "0.0.0", path = "../r3_kernel" }
 r3_core = { version = "0.1.0", path = "../r3_core" }
