--- a/src/r3_support_rp2040/Cargo.toml
+++ b/src/r3_support_rp2040/Cargo.toml
@@ -19,6 +19,9 @@ semver-exempt = [
     "nb",
 ]
 
+# Used for documentation builds [ref:doc_feature]
+doc = []
+
 [dependencies]
 r3_port_arm_m = { version = "0.2.0", path = "../r3_port_arm_m" }
 r3_portkit = { version = "0.1.0", path = "../r3_portkit" }
