--- a/src/r3_core/Cargo.toml
+++ b/src/r3_core/Cargo.toml
@@ -11,7 +11,7 @@ repository = "https://github.com/r3-os/r3"
 [features]
 default = []
 
-# Enable the diagram rendering by svgbob and other fancy stuff
+# Enable the diagram rendering by svgbob and other fancy stuff [ref:doc_feature]
 doc = ["svgbobdoc/enable"]
 
 # Displays a "some features are disabled" warning in the documentation
