--- a/src/r3_kernel/Cargo.toml
+++ b/src/r3_kernel/Cargo.toml
@@ -15,7 +15,7 @@ inline_syscall = []
 priority_boost = []
 system_time = []
 
-# Enable the diagram rendering by svgbob
+# Enable the diagram rendering by svgbob and other stuff [ref:doc_feature]
 doc = ["svgbobdoc/enable"]
 
 # Enable all optional kernel features
