--- a/src/r3_support_rza1/Cargo.toml
+++ b/src/r3_support_rza1/Cargo.toml
@@ -17,6 +17,9 @@ semver-exempt = [
     "nb",
 ]
 
+# Used for documentation builds [ref:doc_feature]
+doc = []
+
 [dependencies]
 r3_port_arm = { version = "0.1.0", path = "../r3_port_arm" }
 r3_portkit = { version = "0.1.0", path = "../r3_portkit" }
