--- a/src/r3_port_arm/Cargo.toml
+++ b/src/r3_port_arm/Cargo.toml
@@ -21,6 +21,7 @@ r3_core = { version = "0.1.0", path = "../r3_core" }
 
 tock-registers = { version = "0.7.0" }
 memoffset = { version = "0.6.5", features = ["unstable_const"] }
+macropol = { version = "0.1.2" }
 r0 = { version = "1.0.0" }
 
 [package.metadata.docs.rs]
