--- a/src/r3_port_arm_test_driver/Cargo.toml
+++ b/src/r3_port_arm_test_driver/Cargo.toml
@@ -36,8 +36,9 @@ r3_port_arm = { path = "../r3_port_arm", optional = true }
 arm_semihosting = { path = "../arm_semihosting", optional = true }
 r3 = { path = "../r3", optional = true }
 
-arrayvec = { version = "0.7.1", optional = true, default-features = false }
 tock-registers = { version = "0.7.0", optional = true }
+arrayvec = { version = "0.7.1", optional = true, default-features = false }
+macropol = { version = "0.1.2" }
 rza1 = { version = "0.2.0", optional = true, features = ["cpg", "gpio", "scif"] }
 log = { version = "0.4.8", optional = true }
 
