--- a/src/r3_core/Cargo.toml
+++ b/src/r3_core/Cargo.toml
@@ -3,7 +3,7 @@ name = "r3_core"
 version = "0.1.0"
 edition = "2021"
 license = "MIT OR Apache-2.0"
-description = "R3 core API definition"
+description = "R3-OS API definition"
 categories = ["embedded", "no-std"]
 keywords = ["r3", "rtos"]
 repository = "https://github.com/r3-os/r3"
