--- a/src/r3_port_arm/Cargo.toml
+++ b/src/r3_port_arm/Cargo.toml
@@ -3,7 +3,7 @@ name = "r3_port_arm"
 version = "0.1.2"
 edition = "2021"
 license = "MIT OR Apache-2.0"
-description = "Arm-A port for R3"
+description = "Armv7-A port for the R3-OS original kernel"
 categories = ["embedded", "no-std"]
 keywords = ["r3", "arm"]
 repository = "https://github.com/r3-os/r3"
