--- a/src/r3_port_arm_m/Cargo.toml
+++ b/src/r3_port_arm_m/Cargo.toml
@@ -3,7 +3,7 @@ name = "r3_port_arm_m"
 version = "0.2.1"
 edition = "2021"
 license = "MIT OR Apache-2.0"
-description = "Cortex-M port for R3"
+description = "Cortex-M port for the R3-OS original kernel"
 categories = ["embedded", "no-std"]
 keywords = ["r3", "arm"]
 repository = "https://github.com/r3-os/r3"
