--- a/src/r3_port_riscv/Cargo.toml
+++ b/src/r3_port_riscv/Cargo.toml
@@ -3,7 +3,7 @@ name = "r3_port_riscv"
 version = "0.1.3"
 edition = "2021"
 license = "MIT OR Apache-2.0"
-description = "RISC-V port for R3"
+description = "RISC-V port for the R3-OS original kernel"
 categories = ["embedded", "no-std"]
 keywords = ["r3", "riscv"]
 repository = "https://github.com/r3-os/r3"
