--- a/src/r3_portkit/Cargo.toml
+++ b/src/r3_portkit/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.3"
 edition = "2021"
 license = "MIT OR Apache-2.0"
 description = "Utilities for writing a port of R3"
+categories = ["embedded", "no-std"]
 keywords = ["r3", "simulator"]
 repository = "https://github.com/r3-os/r3"
 
