--- a/src/r3_kernel/Cargo.toml
+++ b/src/r3_kernel/Cargo.toml
@@ -3,7 +3,7 @@ name = "r3_kernel"
 version = "0.0.0"
 edition = "2021"
 license = "MIT OR Apache-2.0"
-description = "An RTOS kernel implementing the R3 API"
+description = "The R3-OS original kernel"
 categories = ["embedded", "no-std"]
 keywords = ["r3"]
 repository = "https://github.com/r3-os/r3"
