--- a/src/r3_support_rp2040/Cargo.toml
+++ b/src/r3_support_rp2040/Cargo.toml
@@ -3,7 +3,7 @@ name = "r3_support_rp2040"
 version = "0.1.1"
 edition = "2021"
 license = "MIT OR Apache-2.0"
-description = "Supporting package for running R3 on RP2040"
+description = "Supporting package for running R3-OS on RP2040"
 categories = ["embedded", "no-std"]
 keywords = ["r3", "arm"]
 repository = "https://github.com/r3-os/r3"
