--- a/src/r3_support_rza1/Cargo.toml
+++ b/src/r3_support_rza1/Cargo.toml
@@ -3,7 +3,7 @@ name = "r3_support_rza1"
 version = "0.1.2"
 edition = "2021"
 license = "MIT OR Apache-2.0"
-description = "Supporting package for running R3 on Renesas RZ/A1"
+description = "Supporting package for running R3-OS on Renesas RZ/A1"
 categories = ["embedded", "no-std"]
 keywords = ["r3", "arm", "renesas"]
 repository = "https://github.com/r3-os/r3"
