--- a/src/r3_kernel/Cargo.toml
+++ b/src/r3_kernel/Cargo.toml
@@ -1,13 +1,12 @@
 [package]
 name = "r3_kernel"
-version = "0.0.0"
+version = "0.1.0"
 edition = "2021"
 license = "MIT OR Apache-2.0"
 description = "The R3-OS original kernel"
 categories = ["embedded", "no-std"]
 keywords = ["r3"]
 repository = "https://github.com/r3-os/r3"
-publish = false  # it's not ready yet
 
 [features]
 default = []
@@ -41,8 +40,7 @@ chrono = { version = "0.4.13", optional = true, default-features = false }
 either = { version = "1.6.1", default-features = false }
 elain = { version = "0.3.0" }
 
-# FIXME: specify r3_core version
-r3_core = { path = "../r3_core" }
+r3_core = { version = "0.1.0", path = "../r3_core" }
 
 [dev-dependencies]
 quickcheck_macros = "1.0.0"
