chore(deps): upgrade `svgbobdoc` to `0.3.0`
Fixes [the build error][1] that occurs when the `svgbobdoc/enable`
feature is enabled, and the version of `svgbob` specified by
`Cargo.lock` is `0.6.6`, which is newer than what `svgbobdoc
0.3.0-alpha.4` was originally written for but is still supposed to be
compatible as per semantic versioning.

[1]: https://github.com/yvt/svgbobdoc/issues/5

--- a/src/r3_port_riscv/Cargo.toml
+++ b/src/r3_port_riscv/Cargo.toml
@@ -24,7 +24,7 @@ r3_core = { version = "0.1.0", path = "../r3_core" }
 tock-registers = { version = "0.7.0" }
 unstringify = { version = "0.1.4" }
 seq-macro = { version = "0.3.0" }
-svgbobdoc = { version = "0.3.0-alpha.4" }
+svgbobdoc = { version = "0.3.0" }
 riscv-rt = { version = ">= 0.6.0, < 0.9.0" }
 riscv = { version = ">= 0.5.0, < 0.8.0" }
 
