chore(deps): upgrade `rtt-target` to `^0.3.1`
<https://github.com/mvirkkunen/rtt-target/compare/v0.2.2...v0.3.1>

`rtt-target 0.3.1` was in use by `panic-rtt-target` already, but
`r3_port_arm_m_test_driver` used `rtt_init!` from `rtt-target 0.2.2`,
which means the panic output wasn't functional. Upgrading the direct
dependency on `rtt-target` fixes this issue.

--- a/src/r3_port_riscv_test_driver/Cargo.toml
+++ b/src/r3_port_riscv_test_driver/Cargo.toml
@@ -78,7 +78,7 @@ r3_port_riscv = { path = "../r3_port_riscv", optional = true }
 r3_portkit = { path = "../r3_portkit", optional = true }
 r3 = { path = "../r3", optional = true }
 
-rtt-target = { version = "0.2.0", optional = true }
+rtt-target = { version = "0.3.0", optional = true, features = ["riscv"] }
 e310x-hal = { version = "0.9.0", optional = true, features = ["g002"] }
 k210-hal = { version = "0.2.0", optional = true }
 riscv-rt = { version = ">= 0.6.0, < 0.9.0", optional = true }
