--- a/src/r3_test_runner/Cargo.toml
+++ b/src/r3_test_runner/Cargo.toml
@@ -13,6 +13,7 @@ aho-corasick = { version = "0.7.13" }
 futures-core = { version = "0.3.5" }
 probe-rs-rtt = { version = "0.12.0" }
 tokio-serial = { version = "5.4.1" }
+async-mutex = { version = "1.4.0" }
 lazy_static = { version = "1.4.0" }
 env_logger = { version = "0.8.4" }
 serde_json = { version = "1.0.57" }
