--- a/src/r3_port_riscv/Cargo.toml
+++ b/src/r3_port_riscv/Cargo.toml
@@ -21,10 +21,12 @@ r3_portkit = { version = "0.2.0", path = "../r3_portkit" }
 r3_kernel = { version = "0.1.0", path = "../r3_kernel" }
 r3_core = { version = "0.1.0", path = "../r3_core" }
 
+macro_find_and_replace = { version = "1.0.0" }
 tock-registers = { version = "0.7.0" }
 unstringify = { version = "0.1.4" }
 seq-macro = { version = "0.3.0" }
 svgbobdoc = { version = "0.3.0" }
+macropol = { version = "0.1.3" }
 riscv-rt = { version = ">= 0.6.0, < 0.9.0" }
 riscv = { version = ">= 0.5.0, < 0.8.0" }
 
