--- a/src/r3_port_riscv/Cargo.toml
+++ b/src/r3_port_riscv/Cargo.toml
@@ -27,7 +27,7 @@ unstringify = { version = "0.1.4" }
 seq-macro = { version = "0.3.0" }
 svgbobdoc = { version = "0.3.0" }
 macropol = { version = "0.1.3" }
-riscv-rt = { version = ">= 0.6.0, < 0.9.0" }
+riscv-rt = { version = ">= 0.6.0, < 0.9.0", optional = true }
 riscv = { version = ">= 0.5.0, < 0.8.0" }
 
 [package.metadata.docs.rs]
