chore(ci): print Deno's version
Diagnosing the recent failures in the size report workflow.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -63,7 +63,9 @@ jobs:
         run: sudo snap install deno
 
       - name: Check crate metadata
-        run: deno run --allow-read scripts/check-workspace.ts
+        run: |
+          deno --version
+          deno run --allow-read scripts/check-workspace.ts
 
   # Build examples
   build-examples:
