chore(ci): switch to a custom fork of actions-rs/toolchain
This fork includes [actions-rs/toolchain#209][1], the PR that would add
support for TOML-style rustup toolchain files but has been left unmerged
for seven months.

[1]: https://github.com/actions-rs/toolchain/pull/209

--- a/.github/workflows/doc.yml
+++ b/.github/workflows/doc.yml
@@ -12,7 +12,8 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Install Rust
-        uses: actions-rs/toolchain@v1
+        # FIXME: Switch back when actions-rs/toolchain#209 is merged
+        uses: r3-os/actions-rust-toolchain@patch/pr-209
         with:
           profile: minimal
 
