--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,7 +14,8 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Install Rust
-        uses: actions-rs/toolchain@v1
+        # FIXME: Switch back when actions-rs/toolchain#209 is merged
+        uses: r3-os/actions-rust-toolchain@patch/pr-209
         with:
           profile: minimal
           components: clippy, rustfmt
@@ -82,7 +83,8 @@ jobs:
         uses: actions/checkout@v1
 
       - name: Install Rust
-        uses: actions-rs/toolchain@v1
+        # FIXME: Switch back when actions-rs/toolchain#209 is merged
+        uses: r3-os/actions-rust-toolchain@patch/pr-209
         with:
           profile: minimal
 
@@ -123,7 +125,8 @@ jobs:
         uses: actions/checkout@v1
 
       - name: Install Rust
-        uses: actions-rs/toolchain@v1
+        # FIXME: Switch back when actions-rs/toolchain#209 is merged
+        uses: r3-os/actions-rust-toolchain@patch/pr-209
         with:
           profile: minimal
 
@@ -183,7 +186,8 @@ jobs:
         uses: actions/checkout@v1
 
       - name: Install Rust
-        uses: actions-rs/toolchain@v1
+        # FIXME: Switch back when actions-rs/toolchain#209 is merged
+        uses: r3-os/actions-rust-toolchain@patch/pr-209
         with:
           profile: minimal
 
@@ -258,7 +262,8 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Install Rust
-        uses: actions-rs/toolchain@v1
+        # FIXME: Switch back when actions-rs/toolchain#209 is merged
+        uses: r3-os/actions-rust-toolchain@patch/pr-209
         with:
           profile: minimal
           components: rust-src
@@ -323,7 +328,8 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Install Rust
-        uses: actions-rs/toolchain@v1
+        # FIXME: Switch back when actions-rs/toolchain#209 is merged
+        uses: r3-os/actions-rust-toolchain@patch/pr-209
         with:
           profile: minimal
           components: rust-src
